<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    android:background="@color/colorBackground"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.feed.FeedFragment">

    <View
        android:id="@+id/layoutAppBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/posting_description"
        android:textSize="14sp"
        android:fontFamily="@font/heebo_extra_bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@color/colorTextBold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutAppBar" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorGrey"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_description_story"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_edit_text_outline"
            android:gravity="start"
            android:inputType="textMultiLine"
            android:lines="4"
            android:hint="@string/tulis_deskripsi_postingan"
            android:textColor="@color/colorTextBold" />

    </com.google.android.material.textfield.TextInputLayout>



    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/heebo_extra_bold"
        android:text="@string/choose_your_location"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@color/colorTextBold"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <LinearLayout
        android:id="@+id/btn_choose_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="visible"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_edit_text_outline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        android:baselineAligned="false" >

        <TextView
            android:id="@+id/tv_result_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_your_location"
            app:drawableLeftCompat="@drawable/ic_add_location" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/heebo_extra_bold"
        android:text="@string/choose_your_image"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@color/colorTextBold"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_choose_location" />

    <LinearLayout
        android:id="@+id/layoutContainerAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="visible"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_edit_text_outline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/layoutToCamera"
                android:layout_gravity="center"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@color/colorGrey">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerInParent="true"
                    app:srcCompat="@drawable/ic_photo"
                    app:tint="#cccccc"
                    android:contentDescription="@string/open_camera" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/layoutToGallery"
                android:layout_gravity="center"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@color/colorGrey">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerInParent="true"
                    app:srcCompat="@drawable/ic_photo_library"
                    app:tint="#cccccc"
                    android:contentDescription="@string/open_gallery" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutResultImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/textView1">

        <ImageView
            android:id="@+id/img_result_image"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_photo_library"
            android:contentDescription="@string/result_image" />

        <Button
            android:id="@+id/btn_upload_feed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/upload_feed" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/layoutAppBar" />


</androidx.constraintlayout.widget.ConstraintLayout>
